--- a/front/series.html
+++ b/front/series.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="/#">Inicio </a></li>
           <li><a href="./historia.html">Historia Del Cine</a></li>
-          <li><a href="/#board">Peliculas</a></li>
+          <li><a href="./about.html">Acerca de mi</a></li>
           <li><a href="./series.html">Series</a></li>
         </ul>
       </nav>
