--- a/front/about.html
+++ b/front/about.html
@@ -45,7 +45,7 @@
             height="300px"
           />
         </div>
-        <p><strong>Nombre:</strong> Jose Miguel González Guzmán</p>
+        <p class="nombre"><strong>Nombre:</strong> Jose Miguel González Guzmán</p>
 
         <h2>Enfoque</h2>
         <p>
@@ -170,10 +170,8 @@
         <h2>Contacto</h2>
         <p class="contacto">
           Puedes contactarme en
-          <a href="mailto:jmgg.95n@gmail.com"
-            ><i class="fas fa-envelope"></i>
-          </a>
-          o visitar mi perfil en
+          <a href="mailto:jmgg.95n@gmail.com"><i class="fas fa-envelope"></i>
+          </a>o visitar mi perfil en
           <a href="https://www.linkedin.com/in/josemavsg/"
             ><i class="fab fa-linkedin"></i></a
           >.
