--- a/front/historia.html
+++ b/front/historia.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/historia.css" />
@@ -19,8 +20,10 @@
       <div>
         <h1>Pelisflow</h1>
       </div>
-      <nav>
-        <ul>
+      <button id="abrir" class="open-hamburger"><i class="bi bi-list"></i></button>
+      <nav  class="nav" id="nav">
+        <button id="cerrar" class="close-hamburger"><i class="bi bi-x-lg"></i></button>
+        <ul class="nav-list">
           <li><a href="/#">Inicio </a></li>
           <li><a href="./historia.html">Historia Del Cine</a></li>
           <li><a href="./about.html">Acerca de mi</a></li>
@@ -47,7 +50,7 @@
           </div>
           <div>
             <img
-              src="./public/composition-cinema-elements-beige-background.jpg"
+              src="./public/composition-cinema-elements-beige-background.webp"
               width="300px"
               height="300px"
             />
@@ -66,7 +69,7 @@
           </div>
           <div>
             <img
-              src="./public/origen del cine.jpg"
+              src="./public/origen del cine.webp"
               width="300px"
               height="300px"
             />
@@ -84,7 +87,7 @@
           </div>
           <div>
             <img
-              src="./public/cine-mudo-311217_4_1000x563.jpeg"
+              src="./public/cine-mudo-311217_4_1000x563.webp"
               width="300px"
               height="300px"
             />
@@ -101,7 +104,7 @@
             </p>
           </div>
           <div>
-            <img src="./public/sonoro.jpeg" width="300px" height="300px" />
+            <img src="./public/sonoro.webp" width="300px" height="300px" />
           </div>
         </div>
         <div class="feature">
@@ -115,7 +118,7 @@
           </div>
           <div>
             <img
-              src="./public/vincentas-liskauskas-ErMkvcFla74-unsplash.jpg"
+              src="./public/vincentas-liskauskas-ErMkvcFla74-unsplash.webp"
               width="300px"
               height="300px"
             />
@@ -134,7 +137,7 @@
           </div>
           <div>
             <img
-              src="./public/cine-evolucion-640x360.jpg"
+              src="./public/cine-evolucion-640x360.webp"
               width="300px"
               height="300px"
             />
@@ -154,7 +157,7 @@
           </div>
           <div>
             <img
-              src="./public/El-futuro-del-cine-Hacia-la-inmersion-total.jpg"
+              src="./public/El-futuro-del-cine-Hacia-la-inmersion-total.webp"
               width="300px"
               height="300px"
             />
@@ -165,5 +168,6 @@
     <footer>
       <span> Coded with ❤ by Jose Miguel</span>
     </footer>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
