--- a/front/series.html
+++ b/front/series.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/global.css" />
     <title>MovieApp</title>
@@ -18,8 +19,10 @@
       <div>
         <h1>Pelisflow</h1>
       </div>
-      <nav>
-        <ul>
+      <button id="abrir" class="open-hamburger"><i class="bi bi-list"></i></button>
+      <nav  class="nav" id="nav">
+        <button id="cerrar" class="close-hamburger"><i class="bi bi-x-lg"></i></button>
+        <ul class="nav-list">
           <li><a href="/#">Inicio </a></li>
           <li><a href="./historia.html">Historia Del Cine</a></li>
           <li><a href="./about.html">Acerca de mi</a></li>
