--- a/front/index.html
+++ b/front/index.html
@@ -9,7 +9,17 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/global.css" />
     <title>MovieApp</title>
@@ -19,34 +29,59 @@
       <div>
         <h1>Pelisflow</h1>
       </div>
-      <button id="abrir" class="open-hamburger"><i class="bi bi-list"></i></button>
-      <nav  class="nav" id="nav">
-        <button id="cerrar" class="close-hamburger"><i class="bi bi-x-lg"></i></button>
+      <button id="abrir" class="open-hamburger">
+        <i class="bi bi-list"></i>
+      </button>
+      <nav class="nav" id="nav">
+        <button id="cerrar" class="close-hamburger">
+          <i class="bi bi-x-lg"></i>
+        </button>
         <ul class="nav-list">
           <li><a href="/#">Inicio </a></li>
-          <li><a href="./historia.html">Historia Del Cine</a></li>
-          <li><a href="./about.html">Acerca de mi</a></li>
-          <li><a href="./series.html">Series</a></li>
+          <li><a href="./pages/historia.html">Historia Del Cine</a></li>
+          <li><a href="./pages/about.html">Acerca de mi</a></li>
+          <li><a href="./pages/series.html">Series</a></li>
+          <li><a href="./pages/formMovies.html">Agregar Pelicula</a></li>
         </ul>
       </nav>
       <div class="search">
         <input type="text" id="search" placeholder="Buscar..." />
-        <button onclick="buscar()">Buscar</button>
+        <button class="btn" onclick="buscar()">Buscar</button>
       </div>
     </header>
     <main>
+      <div class="content">
+        <div class="banner">
+          <h1>Datos De MongoDb</h1>
+        </div>
+        <section id="mongo"></section>
+      </div>
+      <div class="content">
+        <div class="banner">
+          <h1>Datos de Clase en Backend</h1>
+        </div>
+        <section id="backend"></section>
+      </div>
+
       <div class="titles">
-        <h1>Estrenos</h1>
+        <div class="banner">
+          <h1>Mis Peliculas</h1>
+        </div>
       </div>
       <div class="content">
         <section id="board"></section>
+      </div>
+      <div class="content">
+        <div class="banner">
+          <h1>Henry Ajax Jquery</h1>
+        </div>
+        <section id="server"></section>
       </div>
     </main>
     <footer>
       <span> Coded with ❤ by Jose Miguel</span>
     </footer>
 
-    <script type="module" src="./scripts/tempData.js"></script>
-    <script type="module" src="./scripts/index.js"></script>
+    <script src="./public/bundle.js"></script>
   </body>
 </html>
