--- a/front/pages/formMovies.html
+++ b/front/pages/formMovies.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,78 +13,93 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/global.css" />
     <title>Crear Película</title>
-    
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div>
-          <h1>Pelisflow</h1>
-        </div>
-        <button id="abrir" class="open-hamburger"><i class="bi bi-list"></i></button>
-        <nav  class="nav" id="nav">
-          <button id="cerrar" class="close-hamburger"><i class="bi bi-x-lg"></i></button>
-          <ul class="nav-list">
-            <li><a href="/#">Inicio </a></li>
-            <li><a href="./historia.html">Historia Del Cine</a></li>
-            <li><a href="./about.html">Acerca de mi</a></li>
-            <li><a href="./series.html">Series</a></li>
-            <li><a href="./formMovies.html">Agregar Pelicula</a></li>
-          </ul>
-        </nav>
-        <div class="search">
-          <input type="text" id="search" placeholder="Buscar..." />
-          <button class="btn" onclick="buscar()">Buscar</button>
-        </div>
-      </header>
-      <main>
-
-          <div class="container">
-              <h1>Crear Película</h1>
-              <form id="movieForm">
-                  <div class="form-group">
-                      <label for="title">Título:</label>
-                      <input type="text" id="title"  class="form-control" required>
-                  </div>
-                  <div class="form-group">
-                      <label for="year">Año:</label>
-                      <input  class="form-control" type="number" id="year" required>
-                  </div>
-                  <div class="form-group">
-                      <label for="director">Director:</label>
-                      <input  class="form-control" type="text" id="director" required>
-                  </div>
-                  <div class="form-group">
-                    <label for="duration">Duration:</label>
-                    <input  class="form-control" type="text" id="duration" required>
-                </div>
-                  <div class="form-group">
-                      <label for="genre">Género:</label>
-                      <input  class="form-control" type="text" id="genre" required>
-                  </div>
-                  <div class="form-group">
-                    <label for="rate">Rate:</label>
-                    <input  class="form-control" type="text" id="rate" required>
-                </div>
-                <div class="form-group">
-                    <label for="poster">Link de imagen:</label>
-                    <input  class="form-control" type="text" id="poster" required>
-                </div>
-                  <div class="form-group">
-                      <button  class="btn btn-primary mt-4" type="button" id="submitBtn">Enviar</button>
-                      <button   class="btn btn-danger mt-4" type="button" id="clearBtn">Limpiar</button>
-                  </div>
-              </form>
+      <div>
+        <h1>Pelisflow</h1>
+      </div>
+      <button id="abrir" class="open-hamburger">
+        <i class="bi bi-list"></i>
+      </button>
+      <nav class="nav" id="nav">
+        <button id="cerrar" class="close-hamburger">
+          <i class="bi bi-x-lg"></i>
+        </button>
+        <ul class="nav-list">
+          <li><a href="/#">Inicio </a></li>
+          <li><a href="./historia.html">Historia Del Cine</a></li>
+          <li><a href="./about.html">Acerca de mi</a></li>
+          <li><a href="./series.html">Series</a></li>
+          <li><a href="./formMovies.html">Agregar Pelicula</a></li>
+        </ul>
+      </nav>
+      <div class="search">
+        <input type="text" id="search" placeholder="Buscar..." />
+        <button class="btn" onclick="buscar()">Buscar</button>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <h1>Crear Película</h1>
+        <form id="movieForm">
+          <div class="form-group">
+            <label for="title">Título:</label>
+            <input type="text" id="title" class="form-control" required />
           </div>
-      </main>
+          <div class="form-group">
+            <label for="year">Año:</label>
+            <input class="form-control" type="number" id="year" required />
+          </div>
+          <div class="form-group">
+            <label for="director">Director:</label>
+            <input class="form-control" type="text" id="director" required />
+          </div>
+          <div class="form-group">
+            <label for="duration">Duration:</label>
+            <input class="form-control" type="text" id="duration" required />
+          </div>
+          <div class="form-group">
+            <label for="genre">Género:</label>
+            <input class="form-control" type="text" id="genre" required />
+          </div>
+          <div class="form-group">
+            <label for="rate">Rate:</label>
+            <input class="form-control" type="text" id="rate" required />
+          </div>
+          <div class="form-group">
+            <label for="poster">Link de imagen:</label>
+            <input class="form-control" type="text" id="poster" required />
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary mt-4" type="button" id="submitBtn">
+              Enviar
+            </button>
+            <button class="btn btn-danger mt-4" type="button" id="clearBtn">
+              Limpiar
+            </button>
+          </div>
+        </form>
+      </div>
+      <div id="mensaje"></div>
+    </main>
     <footer>
-        <span> Coded with ❤ by Jose Miguel</span>
-      </footer>
+      <span> Coded with ❤ by Jose Miguel</span>
+    </footer>
     <script src="../public/bundle.js"></script>
-</body>
+  </body>
 </html>
