--- a/front/pages/about.html
+++ b/front/pages/about.html
@@ -6,6 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+    type="image/png"
+    sizes="96x96"
+    rel="icon"
+    href="../public/icons8-movie-gradient-96.png"
+  />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap"
       rel="stylesheet"
     />
